update code to diag

--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -206,7 +206,7 @@
     "    peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=False)\n",
     "\n",
     "    # if it has use_spectral_representation, then it is multivariate\n",
-    "    if use_spectral_representation == True: \n",
+    "    if use_spectral_representation == True:\n",
     "        if is_multivariate==False:\n",
     "            raise ValueError(\"Cannot use spectral representation if it's not multivariate !\")\n",
     "\n",
@@ -380,7 +380,7 @@
     "RESERVOIR_SIZE = 500\n",
     "\n",
     "nb_jobs_per_trial = 1\n",
-    "function_name = \"anti-oja_fast\" # \"desp\" ou \"hadsp\", \"random_ee\", \"random_ei\", \"ip\", \"ip_correct\" or \"anti-oja_fast\"\n",
+    "function_name = \"anti-oja_fast\" # \"desp\" ou \"hadsp\", \"random_ee\", \"random_ei\", \"diag_ee\", \"diag_ei\", \"ip\", \"ip_correct\" or \"anti-oja_fast\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
     "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
@@ -423,19 +423,16 @@
     "        # We often use a log-uniform distribution for learning rates:\n",
     "        oja_eta = trial.suggest_float('oja_eta', 1e-8, 1e-3, log=True)\n",
     "\n",
-    "    if function_name in [\"hadsp\", \"desp\"]:\n",
+    "   if function_name in [\"hadsp\", \"desp\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 0)\n",
     "        weight_increment = trial.suggest_float('weight_increment', 0.001, 0.1, step=0.001)\n",
-    "        max_partners =  np.inf # trial.suggest_int('max_partners', np.inf, np.inf)\n",
+    "        max_partners = np.inf # trial.suggest_int('max_partners', 10, 20)\n",
     "        if is_instances_classification:\n",
     "            use_full_instance = trial.suggest_categorical('use_full_instance', [True, False])\n",
     "        else:\n",
     "            use_full_instance = False\n",
-    "        TIME_INCREMENT = trial.suggest_int('time_increment', int(min_window_size + 1),\n",
-    "                                           100)  # int(min_window_size+1) or int(max_window_size)\n",
-    "        max_increment_span = int(max_window_size) if int(max_window_size) - 100 < 0 else int(max_window_size) - 100\n",
-    "        time_increment_span = trial.suggest_int('time_increment_span', 0, max_increment_span)\n",
-    "        MAX_TIME_INCREMENT = TIME_INCREMENT + time_increment_span  # int(max_window_size) or None or TIME_INCREMENT\n",
+    "        min_increment = trial.suggest_int('min_increment', 3, max_time_increment_possible)\n",
+    "        max_increment = trial.suggest_int('max_increment', min_increment, max_time_increment_possible*5)\n",
     "\n",
     "    # CROSS-VALIDATION METHODS\n",
     "    total_score = 0\n",
@@ -493,24 +490,11 @@
     "                                          leaking_rate=leaky_rate, activation_function=activation_function\n",
     "                                          )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
-    "        elif function_name == \"anti_oja\":\n",
-    "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
-    "                                                  synapse_normalization=True, bcm_theta=None,\n",
-    "                                                  leaking_rate=leaky_rate, activation_function=activation_function,\n",
-    "                                                  )\n",
-    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
     "        elif function_name == \"anti-oja_fast\":\n",
     "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
     "                                                  synapse_normalization=False, bcm_theta=None,\n",
     "                                                  leaking_rate=leaky_rate, activation_function=activation_function,\n",
     "                                                  )\n",
-    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
-    "        elif function_name == \"ip-anti-oja\":\n",
-    "            reservoir = init_ip_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
-    "                                                     synapse_normalization=True, bcm_theta=None,\n",
-    "                                                     mu=mu, sigma=sigma, learning_rate=learning_rate,\n",
-    "                                                     leaking_rate=leaky_rate, activation_function=activation_function,\n",
-    "                                                     )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
     "        elif function_name == \"ip-anti-oja_fast\":\n",
     "            reservoir = init_ip_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
