--- a/3.test performances.ipynb
+++ b/3.test performances.ipynb
@@ -430,12 +430,17 @@
     "        # We want the size of the reservoir to be at least network_size\n",
     "        K = math.ceil(hyperparams['network_size'] / common_size)\n",
     "        n = common_size * K\n",
-    "    \n",
+    "        \n",
+    "        if function_name in [\"diag_ee\", \"diag_ei\"]:\n",
+    "            use_block = True\n",
+    "        else:\n",
+    "            use_block = False\n",
+    "            \n",
     "        # UNSUPERVISED PRETRAINING \n",
     "        if function_name == \"random_ee\":\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'],  K, w_distribution=stats.uniform(loc=0, scale=1), seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'],  K, w_distribution=stats.uniform(loc=0, scale=1), use_block=use_block, seed=random.randint(0, 1000))\n",
     "        else:\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'],  K, w_distribution=stats.uniform(loc=-1, scale=2), seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'],  K, w_distribution=stats.uniform(loc=-1, scale=2), use_block=use_block, seed=random.randint(0, 1000))\n",
     "        bias *= hyperparams['bias_scaling']\n",
     "        Win *= hyperparams['input_scaling']\n",
     "\n",
@@ -453,7 +458,7 @@
     "                                         max_partners=max_partners, method = \"pearson\", \n",
     "                                         intrinsic_saturation=hyperparams['intrinsic_saturation'], intrinsic_coef=hyperparams['intrinsic_coef'], \n",
     "                                         n_jobs = nb_jobs)\n",
-    "        elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"anti-oja_fast\", \"ip-anti-oja\",  \"ip-anti-oja_fast\"]:\n",
+    "        elif function_name in [\"random_ee\", \"random_ei\", \"diag_ee\", \"diag_ei\", \"ip_correct\", \"anti-oja_fast\", \"ip-anti-oja_fast\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= hyperparams['spectral_radius'] / max(abs(eigen))\n",
     "        else:\n",
@@ -469,25 +474,12 @@
     "                                          leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function\n",
     "                                          )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
-    "        elif function_name == \"anti-oja\":\n",
-    "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=hyperparams['oja_eta'],\n",
-    "                                                   synapse_normalization=True, bcm_theta=None,\n",
-    "                                                   leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function,\n",
-    "                                                   )\n",
-    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
     "        elif function_name == \"anti-oja_fast\":\n",
     "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=hyperparams['oja_eta'],\n",
     "                                                  synapse_normalization=False, bcm_theta=None,\n",
     "                                                  leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function,\n",
     "                                                  )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)        \n",
-    "        elif function_name == \"ip-anti-oja\":\n",
-    "            reservoir = init_ip_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=hyperparams['oja_eta'],\n",
-    "                                                      synapse_normalization=True, bcm_theta=None,\n",
-    "                                                      mu=hyperparams['mu'], sigma=hyperparams['sigma'], learning_rate=hyperparams['learning_rate'],\n",
-    "                                                      leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function,\n",
-    "                                                      )\n",
-    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
     "        elif function_name == \"ip-anti-oja_fast\":\n",
     "            reservoir = init_ip_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=hyperparams['oja_eta'],\n",
     "                                                      synapse_normalization=False, bcm_theta=None,\n",
@@ -561,6 +553,7 @@
     "blues = color_palette(\"Blues\", 5)      # shades of blue\n",
     "oranges = color_palette(\"Oranges\", 2)  # shades of orange\n",
     "greens = color_palette(\"Greens\", 2)    # shades of green\n",
+    "reds = color_palette(\"Reds\", 2)    # shades of yellow\n",
     "\n",
     "# -- Map each function to its color --\n",
     "function_colors = {\n",
@@ -573,6 +566,8 @@
     "    'IP +\\nAnti-Oja\\nFast': blues[4],\n",
     "    'mean HAG':             oranges[0],\n",
     "    'variance HAG':         oranges[1],\n",
+    "    'diag EE':             reds[0],\n",
+    "    'diag EI':             reds[1],\n",
     "}\n",
     "\n",
     "# If you want a specific order for the bars, you can enforce it:\n",
@@ -586,6 +581,8 @@
     " #   'IP +\\nAnti-Oja\\nFast',\n",
     "    'mean HAG',\n",
     "    'variance HAG',\n",
+    "    'diag EE',\n",
+    "    'diag EI',\n",
     "]\n",
     "\n",
     "function_mapping = {\n",
@@ -598,6 +595,8 @@
     "    'hadsp':            'mean HAG',\n",
     "    'random_ei':        'ESN',\n",
     "    'random_ee':        'E-ESN',\n",
+    "    'diag_ei':        'diag EI',\n",
+    "    'diag_ee':        'diag EE',\n",
     "}"
    ]
   },
@@ -877,7 +876,7 @@
     "columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
-    "for dataset_name in [\"SpokenArabicDigits\"]: \n",
+    "for dataset_name in [\"SpokenArabicDigits\"]:\n",
     "    new_results = pd.DataFrame(columns=columns)\n",
     "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"SpokenArabicDigits\", \"FSDD\", \"SPEECHCOMMANDS\"\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
@@ -887,8 +886,9 @@
     "        file_name = \"test_results/test_results_prediction.csv\"\n",
     "    print(dataset_name)\n",
     "    # Simulate your data and loop for evaluation\n",
-    "\n",
-    "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"\n",
+    "    \n",
+    "    # \"random_ee\", \"random_ei\", \"diag_ee\", \"diag_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"\n",
+    "    for function_name in [\"diag_ee\", \"diag_ei\"]:\n",
     "        print(function_name)\n",
     "        study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "    \n",
@@ -1379,20 +1379,21 @@
     "    print(dataset)\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset, data_type, noise_std)\n",
     "\n",
-    "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\", \"ip-anti-oja_fast\",  \"hadsp\", \"desp\"]:\n",
+    "    for function_name in [\"random_ee\", \"random_ei\", \"diag_ee\", \"diag_ei\", \"ip_correct\", \"anti-oja_fast\", \"ip-anti-oja_fast\",  \"hadsp\", \"desp\"]:\n",
     "        print(function_name)\n",
     "        # Get the best trial from the study\n",
     "        study = retrieve_best_model(function_name, dataset, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "        hyperparams = {param_name: param_value for param_name, param_value in study.best_trial.params.items()}\n",
     "        print(hyperparams)\n",
-    "        if function_name in [\"hadsp\", \"desp\"]:\n",
-    "            MAX_TIME_INCREMENT = hyperparams['time_increment'] + hyperparams['time_increment_span'] #int(max_window_size) or None or TIME_INCREMENT\n",
-    "    \n",
+    "\n",
     "        if 'variance_target' not in hyperparams and 'min_variance' in hyperparams:\n",
     "            hyperparams['variance_target'] = hyperparams['min_variance']\n",
     "        if not is_instances_classification:\n",
     "            hyperparams['use_full_instance'] = False\n",
-    "\n",
+    "    \n",
+    "        if function_name in [\"hadsp\", \"desp\"]:\n",
+    "            max_partners = np.inf\n",
+    "        \n",
     "        common_index = 1\n",
     "        if is_instances_classification:\n",
     "            common_size = pretrain_data[0].shape[common_index]\n",
@@ -1403,24 +1404,33 @@
     "        K = math.ceil(hyperparams[\"network_size\"] / common_size)\n",
     "        n = common_size * K\n",
     "        \n",
+    "        if function_name in [\"diag_ee\", \"diag_ei\"]:\n",
+    "            use_block = True\n",
+    "        else:\n",
+    "            use_block = False\n",
+    "            \n",
     "        # UNSUPERVISED PRETRAINING \n",
     "        if function_name == \"random_ee\":\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'], K, w_distribution=stats.uniform(loc=0, scale=1), seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'],  K, w_distribution=stats.uniform(loc=0, scale=1), use_block=use_block, seed=random.randint(0, 1000))\n",
     "        else:\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'], K, w_distribution=stats.uniform(loc=-1, scale=2), seed=random.randint(0, 1000))\n",
-    "            \n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'],  K, w_distribution=stats.uniform(loc=-1, scale=2), use_block=use_block, seed=random.randint(0, 1000))\n",
     "        bias *= hyperparams['bias_scaling']\n",
     "        Win *= hyperparams['input_scaling']\n",
     "\n",
     "        if function_name == \"hadsp\":\n",
-    "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, hyperparams['time_increment'], hyperparams['weight_increment'],\n",
-    "                                     hyperparams['target_rate'], hyperparams['rate_spread'], function_name, is_instance=is_instances_classification, use_full_instance=hyperparams['use_full_instance'],\n",
-    "                                     max_increment=MAX_TIME_INCREMENT, max_partners=hyperparams['max_partners'], method=\"pearson\", n_jobs=nb_jobs)\n",
+    "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, \n",
+    "                                     hyperparams['weight_increment'], hyperparams['target_rate'], hyperparams['rate_spread'], function_name, \n",
+    "                                     multiple_instances=is_instances_classification, \n",
+    "                                     min_increment = hyperparams['min_increment'], max_increment=hyperparams['max_increment'], use_full_instance=hyperparams['use_full_instance'],\n",
+    "                                     max_partners=max_partners, method=\"pearson\", n_jobs=nb_jobs)\n",
     "        elif function_name == \"desp\":\n",
-    "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, hyperparams['time_increment'], hyperparams['weight_increment'],\n",
-    "                                    hyperparams['variance_target'], hyperparams['variance_spread'], function_name, is_instance=is_instances_classification, \n",
-    "                                    use_full_instance = hyperparams['use_full_instance'], max_increment=MAX_TIME_INCREMENT, max_partners=hyperparams['max_partners'], method = \"pearson\", \n",
-    "                                    intrinsic_saturation=hyperparams['intrinsic_saturation'], intrinsic_coef=hyperparams['intrinsic_coef'], n_jobs = nb_jobs)\n",
+    "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, \n",
+    "                                         hyperparams['weight_increment'], hyperparams['variance_target'], hyperparams['variance_spread'], function_name, \n",
+    "                                         multiple_instances=is_instances_classification, \n",
+    "                                         min_increment = hyperparams['min_increment'], max_increment=hyperparams['max_increment'], use_full_instance = hyperparams['use_full_instance'], \n",
+    "                                         max_partners=max_partners, method = \"pearson\", \n",
+    "                                         intrinsic_saturation=hyperparams['intrinsic_saturation'], intrinsic_coef=hyperparams['intrinsic_coef'], \n",
+    "                                         n_jobs = nb_jobs)\n",
     "        elif function_name in [\"random_ee\", \"random_ei\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= hyperparams['spectral_radius'] / max(abs(eigen))\n",
