update ploting separability and metrics

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -11,16 +11,12 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from pathlib import Path\n",
-    "\n",
     "import numpy as np\n",
-    "from joblib import Parallel, delayed\n",
     "from tqdm import tqdm\n",
     "from importlib import reload\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
-    "from seaborn import heatmap, color_palette"
+    "from seaborn import heatmap"
    ]
   },
   {
@@ -186,7 +182,7 @@
    },
    "outputs": [],
    "source": [
-    "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
+    "from datasets.multivariate_generation import extract_peak_frequencies\n",
     "\n",
     "freq_train_data = X_train_band if is_multivariate else X_train\n",
     "flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
@@ -209,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
+    "from datasets.multivariate_generation import generate_multivariate_dataset\n",
     "\n",
     "# if it has use_spectral_representation, then it is multivariate\n",
     "if use_spectral_representation == True: \n",
@@ -421,7 +417,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from seaborn import color_palette\n",
-    "import librosa\n",
     "import librosa.display\n",
     "from matplotlib.patches import ConnectionPatch\n",
     "\n",
@@ -569,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets.preprocessing import add_noise, duplicate_data\n",
+    "from datasets.preprocessing import add_noise\n",
     "\n",
     "#Train/Val/Test\n",
     "if is_instances_classification:\n",
@@ -733,7 +728,7 @@
    },
    "outputs": [],
    "source": [
-    "from reservoir.activation_functions import tanh, heaviside, sigmoid, softplus, heaviside\n",
+    "from reservoir.activation_functions import tanh\n",
     "\n",
     "# the activation function choosen for the rest of the experiment\n",
     "# activation_function = lambda x : sigmoid(2*(x-0.5))tanh(x)\n",
@@ -844,7 +839,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import optuna\n",
+    "\n",
     "from performances.utility import retrieve_best_model\n",
     "\n",
     "function_name = \"hadsp\"  # \"desp\" ou \"hadsp\" or \"random\"\n",
@@ -886,9 +881,9 @@
    },
    "outputs": [],
    "source": [
-    "from reservoir.reservoir import init_matrices\n",
+    "\n",
     "from connexion_generation.hag import run_algorithm\n",
-    "from scipy import sparse\n",
+    "\n",
     "target_rate = 0.7\n",
     "rate_spread = 0.1\n",
     "\n",
@@ -1137,7 +1132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analysis.richness import pearson, distance_correlation\n",
+    "from analysis.richness import pearson\n",
+    "\n",
     "num_windows = 1500\n",
     "size_window = 100\n"
    ]
@@ -1397,7 +1393,7 @@
    "source": [
     "import analysis.richness\n",
     "reload(analysis.richness)\n",
-    "from analysis.richness import squared_uncoupled_dynamics, squared_uncoupled_dynamics_alternative\n",
+    "from analysis.richness import squared_uncoupled_dynamics_alternative\n",
     "\n",
     "uds_hag = squared_uncoupled_dynamics_alternative(np.array(state_history_hag), size_window=500, num_windows=num_windows, A=0.99)\n",
     "uds_multi = squared_uncoupled_dynamics_alternative(np.array(states_history_multi), size_window=500, num_windows=num_windows, A=0.99)\n",
@@ -1431,7 +1427,6 @@
    "source": [
     "import analysis.richness\n",
     "reload(analysis.richness)\n",
-    "from analysis.richness import squared_uncoupled_dynamics\n",
     "\n",
     "uds_random = squared_uncoupled_dynamics_alternative(states_history_random, size_window=500, num_windows=num_windows, A=0.99)\n",
     "\n",
@@ -1728,8 +1723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from joblib import Parallel, delayed\n",
-    "from sklearn.metrics import mutual_info_score\n",
+    "\n",
     "\n",
     "N_JOBS = -1\n",
     "RIDGE_COEF= 1e-9 if ridge is None else 10**ridge"
@@ -1742,7 +1736,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from performances.esn_model_evaluation import init_nvar_model, init_reservoir, init_ip_reservoir, init_readout\n",
+    "from performances.esn_model_evaluation import init_reservoir, init_readout\n",
     "\n",
     "reservoir_hag_multi = init_reservoir(W_hag_multi, Win_hag_multi, bias_hag_multi, leaky_rate, activation_function)\n",
     "readout_hag_multi = init_readout(ridge_coef=RIDGE_COEF)\n",
@@ -1809,8 +1803,9 @@
    },
    "outputs": [],
    "source": [
-    "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
-    "# To remember : \n",
+    "from performances.esn_model_evaluation import train_model_for_classification\n",
+    "\n",
+    "# To remember :\n",
     "#  For reservoirpy   pre_s = W @ r + Win @ (u + noise_gen(dist=dist, shape=u.shape, gain=g_in)) + bias\n",
     "\n",
     "train_data_multi = X_train_band # X_train_band_noisy or X_train_band\n",
@@ -2009,8 +2004,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from performances.esn_model_evaluation import train_model_for_prediction, compute_score\n",
-    "from performances.esn_model_evaluation import init_nvar_model, init_reservoir, init_ip_reservoir\n",
+    "from performances.esn_model_evaluation import train_model_for_prediction\n",
     "\n",
     "if not is_multivariate:\n",
     "    train_data_uni = X_train # X_train_noisy or X_train\n",
@@ -2078,7 +2072,7 @@
    },
    "outputs": [],
    "source": [
-    "from plots.plots import plot_results\n",
+    "from performances.plots import plot_prediction_vs_actual\n",
     "from performances.esn_model_evaluation import compute_score\n",
     "\n",
     "START_STEP = 30\n",
@@ -2092,7 +2086,7 @@
     "print(\"nrmse random + band  :\", compute_score(Y_val[slice_range], y_pred_random_multi[slice_range], is_instances_classification))\n",
     "print(\"nrmse hag + band   :\", compute_score(Y_val[slice_range], y_pred_hag_multi[slice_range], is_instances_classification))\n",
     "\n",
-    "plot_results(y_pred_hag_multi, Y_test, 0, 300)\n"
+    "plot_prediction_vs_actual(y_pred_hag_multi, Y_test, 0, 300)\n"
    ]
   },
   {
@@ -2127,7 +2121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plots.plots import plot_results\n",
+    "from performances.plots import plot_prediction_vs_actual\n",
     "\n",
     "START_STEP = 50\n",
     "END_STEP = 500\n",
@@ -2139,7 +2133,7 @@
     "print(\"nrmse random + band  :\", compute_score(y_pred_random_multi[slice_range], Y_val[slice_range], is_instances_classification))\n",
     "print(\"nrmse hag + band   :\", compute_score(y_pred_hag_multi[slice_range], Y_val[slice_range], is_instances_classification))\n",
     "\n",
-    "plot_results(y_pred_hag_multi, Y_test, 0, 300)\n"
+    "plot_prediction_vs_actual(y_pred_hag_multi, Y_test, 0, 300)\n"
    ]
   },
   {
@@ -2175,7 +2169,7 @@
     "print(\"nrmse random + band  :\", compute_score(ave_y_random_multi[slice_range], Y_val[slice_range], is_instances_classification))\n",
     "print(\"nrmse hag + band   :\", compute_score(ave_y_hag_multi[slice_range], Y_val[slice_range], is_instances_classification))\n",
     " \n",
-    "plot_results(ave_y_hag_multi.reshape(-1,1), Y_test, 300)"
+    "plot_prediction_vs_actual(ave_y_hag_multi.reshape(-1, 1), Y_test, 300)"
    ]
   },
   {
@@ -2487,7 +2481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
