dataset characteristic and hpo methods results

--- a/3.test performances.ipynb
+++ b/3.test performances.ipynb
@@ -348,7 +348,7 @@
     "df = pd.DataFrame(results)\n",
     "\n",
     "# Save to CSV\n",
-    "csv_filename = \"dataset_characteristics.csv\"\n",
+    "csv_filename = \"outputs/dataset_characteristics.csv\"\n",
     "df.to_csv(csv_filename, index=False)\n",
     "\n",
     "print(f\"Dataset characteristics saved to {csv_filename}\")"
