--- a/2.test performances.ipynb
+++ b/2.test performances.ipynb
@@ -1078,36 +1078,48 @@
     "import pandas as pd\n",
     "from performances.utility import camel_to_snake, retrieve_best_model\n",
     "\n",
-    "\n",
-    "# List of datasets (extract from filenames)\n",
     "datasets = [\n",
-    "    \"SpokenArabicDigits\",\n",
-    "    \"JapaneseVowels\",\n",
-    "    \"FSDD\",\n",
-    "    \"SPEECHCOMMANDS\",\n",
-    "    \"CatsDogs\",\n",
-    "    \"MackeyGlass\",\n",
-    "    \"Lorenz\",\n",
-    "    \"Sunspot_daily\",\n",
+    "    \"JapaneseVowels\", \"CatsDogs\", \"SpokenArabicDigits\", \"FSDD\",\n",
+    "    \"SPEECHCOMMANDS\", \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\",\n",
     "]\n",
     "\n",
-    "for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]:\n",
-    "    results = []\n",
-    "    for dataset in datasets:\n",
-    "        study = retrieve_best_model(function_name, dataset, is_multivariate=True, variate_type = \"multi\", data_type = \"normal\")\n",
-    "        best_trial = study.best_trial\n",
-    "        results.append({\n",
-    "            \"dataset\": dataset,\n",
-    "            \"function_name\": function_name,\n",
-    "            **best_trial.params,\n",
+    "# helper ────────────────────────────────────────────────────────────\n",
+    "def smart_format(x, ndigits=5):\n",
+    "    \"\"\"\n",
+    "    • If |x| is smaller than 1e-3  → scientific notation with `ndigits` decimals.\n",
+    "    • Otherwise                  → round to `ndigits` decimals (keeps 12345.6, 0.012345 …).\n",
+    "    \"\"\"\n",
+    "    if not isinstance(x, float):\n",
+    "        return x                      # leave non-floats untouched\n",
+    "    if x == 0.0:\n",
+    "        return 0.0                    # keep plain zero\n",
+    "    if abs(x) < 1e-3:                 # 0.000 … region\n",
+    "        return f\"{x:.{ndigits}e}\"     # e.g. 1.23456e-04\n",
+    "    return round(x, ndigits)          # ordinary decimal\n",
+    "\n",
+    "# main loop ─────────────────────────────────────────────────────────\n",
+    "for fn_name in [\"random_ee\", \"random_ei\", \"ip_correct\",\n",
+    "                \"anti-oja_fast\", \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]:\n",
+    "\n",
+    "    rows = []\n",
+    "    for ds in datasets:\n",
+    "        study = retrieve_best_model(\n",
+    "            fn_name, ds,\n",
+    "            is_multivariate=True, variate_type=\"multi\", data_type=\"normal\"\n",
+    "        )\n",
+    "        params = {k: smart_format(v) for k, v in study.best_trial.params.items()}\n",
+    "\n",
+    "        rows.append({\n",
+    "            \"dataset\": ds,\n",
+    "            \"function_name\": fn_name,\n",
+    "            **params,\n",
     "        })\n",
-    "    # Convert results to a DataFrame\n",
-    "    df = pd.DataFrame(results)\n",
-    "    \n",
-    "    # Save to CSV\n",
-    "    df.to_csv(f\"outputs/best_hyperparameters_{function_name}.csv\", index=False)\n",
-    "    \n",
-    "    print(f\"Results saved to best_hyperparameters_{function_name}.csv\")\n"
+    "\n",
+    "    pd.DataFrame(rows).to_csv(\n",
+    "        f\"outputs/best_hyperparameters_{fn_name}.csv\",\n",
+    "        index=False\n",
+    "    )\n",
+    "    print(f\"Results saved to best_hyperparameters_{fn_name}.csv\")"
    ]
   },
   {
@@ -1164,7 +1176,7 @@
     "for dataset in datasets:\n",
     "    print(dataset)\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset, data_type, noise_std, visualize=False)\n",
-    "    for function_name in [\"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"anti-oja_fast\",  \"ip-anti-oja\", \"hadsp\", \"desp\"\n",
+    "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"anti-oja_fast\",  \"ip-anti-oja\", \"hadsp\", \"desp\"\n",
     "        # Get the best trial from the study\n",
     "        print(function_name)\n",
     "        study = retrieve_best_model(function_name, dataset, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
@@ -1179,7 +1191,7 @@
     "            Y_train, \n",
     "            Y_test,\n",
     "            is_instances_classification,\n",
-    "            nb_trials = 1,\n",
+    "            nb_trials = 4,\n",
     "            record_metrics=True\n",
     "        )\n",
     "        # Create a new DataFrame row\n",
@@ -1415,7 +1427,6 @@
     "    sil_scores = []\n",
     "    dbi_scores = []\n",
     "    ch_scores  = []\n",
-    "    fdr_scores = []\n",
     "\n",
     "    for i in range(nb_trials):\n",
     "        print(\"Trial\", i + 1, \"of\", nb_trials)\n",
@@ -1512,7 +1523,6 @@
     "            sil = silhouette(final_states, y_test)\n",
     "            dbi = davies_bouldin(final_states, y_test)\n",
     "            ch  = calinski_harabasz(final_states, y_test)\n",
-    "            fdr = fisher_discriminant_ratio(final_states, y_test)\n",
     "\n",
     "            inter_dists.append(inter_dist)\n",
     "            intra_dists.append(intra_dist)\n",
@@ -1521,7 +1531,6 @@
     "            sil_scores.append(sil)\n",
     "            dbi_scores.append(dbi)\n",
     "            ch_scores.append(ch)\n",
-    "            fdr_scores.append(fdr)\n",
     "\n",
     "    return {\n",
     "        'inter': inter_dists,\n",
@@ -1530,7 +1539,6 @@
     "        'silhouette': sil_scores,\n",
     "        'davies_bouldin': dbi_scores,\n",
     "        'calinski_harabasz': ch_scores,\n",
-    "        'fisher_ratio': fdr_scores\n",
     "    }\n"
    ]
   },
@@ -1563,10 +1571,7 @@
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, \\\n",
     "        is_instances_classification = load_data(dataset, data_type, noise_std, visualize=False)\n",
     "\n",
-    "    for function_name in [\n",
-    "        \"random_ee\", \"random_ei\", \"ip_correct\",\n",
-    "        \"anti-oja_fast\", \"ip-anti-oja_fast\", \"hadsp\", \"desp\",\n",
-    "    ]:\n",
+    "    for function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"hadsp\", \"desp\"]: # \"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja_fast\", \"ip-anti-oja_fast\", \"hadsp\", \"desp\"\n",
     "        print(function_name)\n",
     "\n",
     "        study = retrieve_best_model(\n",
@@ -1599,8 +1604,6 @@
     "            \"davies_bouldin_std\":  np.std(results['davies_bouldin']),\n",
     "            \"calinski_harabasz_mean\": np.mean(results['calinski_harabasz']),\n",
     "            \"calinski_harabasz_std\":  np.std(results['calinski_harabasz']),\n",
-    "            \"fisher_ratio_mean\": np.mean(results['fisher_ratio']),\n",
-    "            \"fisher_ratio_std\":  np.std(results['fisher_ratio']),\n",
     "        })\n"
    ]
   },
